--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,17 @@
 // Table of Contents
 //
+// - Basics
+//   - Typography
+
+
+
+// Basics - Typography
+
+$font-family-monospace:  "Roboto Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+$font-family-sans-serif: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif !default;
+$font-family-serif:      "Roboto Slab", Georgia, "Times New Roman", Times, serif !default;
+
+$font-size-base:         .875rem !default;
+$font-size-root:         16px !default;
+
+$line-height-base:       1.428572 !default;
