add mixin for material icons

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -34,3 +34,5 @@ $font-size-base:         .875rem !default;
 $font-size-root:         16px !default;
 
 $line-height-base:       1.428572 !default;
+
+$material-icon-size:     (24px / $font-size-root * 1rem) !default;
