add mixin for stripping unit

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,7 +1,9 @@
 // Table of Contents
 //
 // - Material icons
+// - Strip unit
 
 
 
 @import 'mixins/material-icons';
+@import 'mixins/strip-unit';
