add mixin for text field

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,8 +2,10 @@
 //
 // - Material icons
 // - Strip unit
+// - Text field
 
 
 
 @import 'mixins/material-icons';
 @import 'mixins/strip-unit';
+@import 'mixins/text-field';
