--- a/scss/common.scss
+++ b/scss/common.scss
@@ -6,9 +6,11 @@
 // Table of contents
 //
 // - Base
+// - Chip
 // - Header
 // - Menu panel
 
 @import 'common/base';
+@import 'common/chip';
 @import 'common/header';
 @import 'common/menu-panel';
