--- a/common/common.scss
+++ b/common/common.scss
@@ -24,6 +24,84 @@ html {
   padding: 0;
 }
 
+.badge-notification {
+  background-color: rgba(0, 0, 0, 0.04);
+  border-radius: 1em;
+  color: $primary;
+  font-size: .857142857em;
+  padding: 0.25rem 0.375rem;
+}
+.badge-notification:focus, .badge-notification:hover {
+  color: $primary;
+}
+
+.badge-wrapper {
+  background-color: rgba(0, 0, 0, 0.04);
+  border-radius: 1rem;
+  color: inherit;
+  font-size: 0.8125rem;
+  font-weight: normal;
+  padding-right: 0.75rem;
+}
+.badge-wrapper, .badge-wrapper.bullet {
+  line-height: 1;
+}
+.badge-wrapper[href]:focus, .badge-wrapper[href]:hover {
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
+}
+.badge-wrapper.bullet {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.badge-wrapper.bullet span.badge-category {
+  line-height: 2rem;
+}
+.badge-wrapper.bullet span.badge-category-bg {
+  border-radius: 50%;
+  -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
+          flex-shrink: 0;
+  height: 2rem;
+  line-height: 1;
+  margin-right: 0.25rem;
+  width: 2rem;
+}
+.badge-wrapper.bullet span.badge-category-parent-bg {
+  border-radius: 1rem 0 0 1rem;
+  -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
+          flex-shrink: 0;
+  height: 2rem;
+  width: 1rem;
+}
+.badge-wrapper.bullet span.badge-category-parent-bg + .badge-category-bg {
+  border-radius: 0 1rem 1rem 0;
+  width: 1rem;
+}
+.badge-wrapper .fa-lock {
+  font-family: 'Material Icons';
+  -webkit-font-feature-settings: 'liga';
+          font-feature-settings: 'liga';
+  font-size: 1.714286em;
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: normal;
+  line-height: 0.583333em;
+  text-rendering: optimizeLegibility;
+  text-transform: none;
+  vertical-align: -0.302198em;
+  white-space: nowrap;
+  word-wrap: normal;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+.badge-wrapper .fa-lock::before {
+  content: 'lock_outline';
+}
+
 .d-header {
   -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
           box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
