--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,10 +2,12 @@
 //
 // - Material icons
 // - Strip unit
+// - Table
 // - Text field
 
 
 
 @import 'mixins/material-icons';
 @import 'mixins/strip-unit';
+@import 'mixins/table';
 @import 'mixins/text-field';
