--- a/scss/common.scss
+++ b/scss/common.scss
@@ -9,8 +9,10 @@
 // - Chip
 // - Header
 // - Menu panel
+// - Topic list
 
 @import 'common/base';
 @import 'common/chip';
 @import 'common/header';
 @import 'common/menu-panel';
+@import 'common/topic-list';
