--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -62,6 +62,10 @@
         border: 0;
         color: inherit;
       }
+
+      &:focus {
+        outline: 0;
+      }
     }
 
     .active .icon {
