--- a/common/common.scss
+++ b/common/common.scss
@@ -50,6 +50,9 @@ html {
   -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
           box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
 }
+.badge-wrapper[href]:focus {
+  outline: 0;
+}
 .badge-wrapper.bullet {
   -webkit-box-align: center;
   -webkit-align-items: center;
