--- a/scss/common.scss
+++ b/scss/common.scss
@@ -10,9 +10,11 @@
 // - Header
 // - Menu panel
 // - Topic list
+//   - Suggested topics
 
 @import 'common/base';
 @import 'common/chip';
 @import 'common/header';
 @import 'common/menu-panel';
 @import 'common/topic-list';
+@import 'common/topic-list-suggested';
