--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -63,6 +63,7 @@ $header-box-shadow:     $shadow-4dp !default;
 $header-height:         3.5rem !default;
 $header-item-overlay:   rgba(0, 0, 0, .12) !default;
 $header-inner-spacer-x: .5rem !default;
+$header-margin-y:       1rem !default;
 $header-padding-x:      0 !default;
 $header-padding-y:      .5rem !default;
 
