--- a/scss/common/_topic-list.scss
+++ b/scss/common/_topic-list.scss
@@ -131,6 +131,13 @@
     }
   }
 
+  .posters {
+    > a {
+      float: none;
+      margin-right: $tbody-cell-padding-x;
+    }
+  }
+
   .sortable {
     &:focus,
     &:hover {
