add basic card styles

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,5 +1,6 @@
 // Table of Contents
 //
+// - Card
 // - Material icons
 // - Strip unit
 // - Table
@@ -7,6 +8,7 @@
 
 
 
+@import 'mixins/card';
 @import 'mixins/material-icons';
 @import 'mixins/strip-unit';
 @import 'mixins/table';
