apply card styles to `.alert`

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -9,6 +9,7 @@
 // - Chip
 // - Header
 // - Menu panel
+// - Notification
 // - Topic list
 //   - Suggested topics
 
@@ -16,5 +17,6 @@
 @import 'common/chip';
 @import 'common/header';
 @import 'common/menu-panel';
+@import 'common/notification';
 @import 'common/topic-list';
 @import 'common/topic-list-suggested';
