--- a/common/common.scss
+++ b/common/common.scss
@@ -550,6 +550,22 @@ div.menu-links-header .menu-links-row {
   background-color: transparent;
 }
 
+.alert {
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
+  padding: 1rem 1rem;
+  margin-bottom: 0.5rem;
+}
+.alert[href]:focus, .alert[href]:hover, .alert[tabindex]:focus, .alert[tabindex]:hover {
+  -webkit-box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
+  text-decoration: none;
+}
+.alert[href]:focus, .alert[tabindex]:focus {
+  outline: 0;
+}
+
 .topic-list {
   background-color: #ffffff;
   border: 0;
