--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -6,6 +6,49 @@
   min-height: $header-height;
   padding: $header-padding-y $header-padding-x;
 
+  button {
+    &.login-button {
+      align-items: center;
+      background-color: transparent;
+      background-image: none;
+      border-radius: 50%;
+      color: transparent;
+      display: flex;
+      font-size: inherit;
+      height: ($header-height - $header-padding-y * 2);
+      line-height: inherit;
+      margin-top: 0;
+      margin-left: $header-inner-spacer-x;
+      overflow: hidden;
+      padding: 0 (($header-height - $header-padding-y * 2 - $material-icon-size) / 2);
+      position: relative;
+      white-space: nowrap;
+      width: ($header-height - $header-padding-y * 2);
+
+      &:focus,
+      &:hover {
+        background-color: $header-item-overlay;
+      }
+
+      &:focus {
+        outline: 0;
+      }
+
+      .fa-user {
+        @include material-icons;
+
+        color: unquote('$header-primary');
+        margin-right: 100%;
+        position: absolute;
+
+
+        &::before {
+          content: 'person';
+        }
+      }
+    }
+  }
+
   .contents {
     align-items: center;
     display: flex;
