--- a/scss/common.scss
+++ b/scss/common.scss
@@ -10,6 +10,7 @@
 // - Header
 // - Menu panel
 // - Notification
+// - Post
 // - Topic list
 //   - Suggested topics
 
@@ -18,5 +19,6 @@
 @import 'common/header';
 @import 'common/menu-panel';
 @import 'common/notification';
+@import 'common/post';
 @import 'common/topic-list';
 @import 'common/topic-list-suggested';
