--- a/scss/common/_post.scss
+++ b/scss/common/_post.scss
@@ -1,3 +1,34 @@
+nav {
+  &.post-controls {
+    .actions {
+      align-items: center;
+      display: flex;
+      float: none;
+      margin-right: ($card-inner-spacer-x * -1);
+      margin-left: ($card-inner-spacer-x * -1);
+      padding-top: ($card-inner-spacer-y / 2);
+      padding-bottom: ($card-inner-spacer-y / 2);
+      text-align: left;
+
+      button {
+        margin-right: $card-inner-spacer-x;
+        margin-left: 0;
+        padding-right: $card-inner-spacer-x;
+        padding-left: $card-inner-spacer-x;
+
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+}
+
+.post-menu-area {
+  margin-top: $card-inner-spacer-y;
+  margin-bottom: $card-inner-spacer-y;
+}
+
 .topic-avatar {
   border: 0;
   padding: 0;
@@ -21,6 +52,14 @@
     @include card-block;
 
     margin: 0;
+
+    > :first-child {
+      margin-top: 0;
+    }
+
+    > :last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
