add flat button mixin

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,5 +1,6 @@
 // Table of Contents
 //
+// - Button
 // - Card
 // - Material icons
 // - Strip unit
@@ -8,6 +9,7 @@
 
 
 
+@import 'mixins/button';
 @import 'mixins/card';
 @import 'mixins/material-icons';
 @import 'mixins/strip-unit';
